Separated the menu charset code from the charset initialization function, to avoid the mail font code calling the init function and reset the menu charset, bug 150530, r=ducarroz, sr=bienvenu.